Mostly refactored to Item domain. Some issues with Summaries and Relationships.